--- a/_config.yml
+++ b/_config.yml
@@ -1,59 +1,24 @@
-# Site title and subtitle. This is used in _includes/header.html
-title: 'Mining SE Data for Reuse'
-subtitle: 'Mining Software Engineering Data for Software Reuse'
+title: Mining Software Engineering Data for Software Reuse
+description: Book by Themistoklis Diamantopoulos & Andreas L. Symeonidis
+baseurl: "https://thdiaman.github.io/mining-software-reuse-book"
 
-# if you wish to integrate disqus on pages set your shortname here
-disqus_shortname: ''
+styles:
+  brand-color: "#268bd2"
+  link-text-decoration: none
 
-# if you use google analytics, add your tracking id here
-google_analytics_id: ''
+google_analytics:
 
-# Enable/show navigation. There are there options:
-#   0 - always hide
-#   1 - always show
-#   2 - show only if posts are present
-navigation: 1
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
 
-# URL to source code, used in _includes/footer.html
-codeurl: 'https://github.com/thdiaman/mining-software-reuse-book'
-
-# Default categories (in order) to appear in the navigation
-sections: [
-    ['info', 'Main Information'],
-    ['data', 'Supporting Material'],
-    ['ref', 'References']
-]
-
-collections:
-    ref:
-
-# Keep as an empty string if served up at the root. If served up at a specific
-# path (e.g. on GitHub pages) leave off the trailing slash, e.g. /my-project
-# baseurl: 'https://thdiaman.github.io/mining-software-reuse-book'
-baseurl: 'https://thdiaman.github.io/mining-software-reuse-book'
-
-# Dates are not included in permalinks
-permalink: none
-
-# Syntax highlighting
-highlighter: rouge
-
-# Since these are pages, it doesn't really matter
-future: true
-
-# Exclude non-site files
-exclude: ['bin', 'README.md', 'LICENSE.md']
-
-# Use the kramdown Markdown renderer
-markdown: kramdown
-redcarpet:
-    extensions: [
-        'no_intra_emphasis',
-        'fenced_code_blocks',
-        'autolink',
-        'strikethrough',
-        'superscript',
-        'with_toc_data',
-        'tables',
-        'hardwrap'
-    ]
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+  - LICENSE.md
+  - template
